--- a/index.html
+++ b/index.html
@@ -3,28 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <script src="js/jquery-1.7.2.js"></script>
-    <script src="js/game.js"></script>
+    
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>Project ZERO </h1>
-
+    <h1>TIc - tac - TOE </h1>
     <div class = 'gridbox'>
-        <div class = 'griditem'><button> Select</button></div>
-        <div class = 'griditem'><button> Select</button></div>
-        <div class = 'griditem'><button> Select</button></div>
-        <div class = 'griditem'><button> Select</button></div>
-        <div class = 'griditem'><button> Select</button></div>
-        <div class = 'griditem'><button> Select</button></div>
-        <div class = 'griditem'><button> Select</button></div>
-        <div class = 'griditem'><button> Select</button></div>
-        <div class = 'griditem'><button> Select</button></div>
-
-        
-
+        <div class = 'griditem' id="box1"><button> Select</button></div>
+        <div class = 'griditem' id="box2"><button> Select</button></div>
+        <div class = 'griditem' id="box3"><button> Select</button></div>
+        <div class = 'griditem' id="box4"><button> Select</button></div>
+        <div class = 'griditem' id="box5"><button> Select</button></div>
+        <div class = 'griditem' id="box6"><button> Select</button></div>
+        <div class = 'griditem' id="box7"><button> Select</button></div>
+        <div class = 'griditem' id="box8"><button> Select</button></div>
+        <div class = 'griditem' id="box9"><button> Select</button></div>
     </div>
+
+
+    <h4 id = "result">Who wins?</h4>
+    <script src="js/jquery-1.7.2.js"></script>
+    <script src="js/game.js"></script>
 </body>
 </html>
