DRYer code for user selections(X and O) and preventing double clicking

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>TIc - tac - TOE </h1>
+    <h1>Tic - tac - TOE </h1>
     <div class = 'gridbox'>
-        <div class = 'griditem' id="box1"><button id="button1value"> Select</button></div>
-        <div class = 'griditem' id="box2"><button> Select</button></div>
-        <div class = 'griditem' id="box3"><button> Select</button></div>
-        <div class = 'griditem' id="box4"><button> Select</button></div>
-        <div class = 'griditem' id="box5"><button> Select</button></div>
-        <div class = 'griditem' id="box6"><button> Select</button></div>
-        <div class = 'griditem' id="box7"><button> Select</button></div>
-        <div class = 'griditem' id="box8"><button> Select</button></div>
-        <div class = 'griditem' id="box9"><button> Select</button></div>
+        <div class = 'griditem' matrix id="box1"><cell id = "checkbox1"></cell></div>
+        <div class = 'griditem' matrix id="box2"><cell id = "checkbox2"></cell></div>
+        <div class = 'griditem' matrix id="box3"><cell id = "checkbox3"></cell></div>
+        <div class = 'griditem' matrix id="box4"><cell id = "checkbox4"></cell></div>
+        <div class = 'griditem' matrix id="box5"><cell id = "checkbox5"></cell></div>
+        <div class = 'griditem' matrix id="box6"><cell id = "checkbox6"></cell></div>
+        <div class = 'griditem' matrix id="box7"><cell id = "checkbox7"></cell></div>
+        <div class = 'griditem' matrix id="box8"><cell id = "checkbox8"></cell></div>
+        <div class = 'griditem' matrix id="box9"><cell id = "checkbox9"></cell></div>
     </div>
 
 
