added some styling (b.image, set grid centre) shaved code down to 150 lines, still not using loops for result output

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <title>Document</title>
 </head>
 <body>
+    <img src="images/street-fighter-logo-font-download-856x484.jpeg" id="logo" alt="">
+    <div class = "container">
+    
     <h1>Tic - tac - TOE </h1>
     <div class = 'gridbox'>
         <div class = 'griditem' matrix id="box1"><cell id = "checkbox1"></cell></div>
@@ -22,8 +25,7 @@
         <div class = 'griditem' matrix id="box8"><cell id = "checkbox8"></cell></div>
         <div class = 'griditem' matrix id="box9"><cell id = "checkbox9"></cell></div>
     </div>
-
-
+<img class ='display' src="images/ryuvskenbackgroundNEW.jpg_large" alt="">
     <h4 id ="result">Who wins?</h4>
     <button onclick="location.reload();">New Game</button>
     <input type="reset" id = "newroundbutton" value="New Round?">
@@ -42,6 +44,7 @@
 <h2> Round </h2>
 <h3 id ="roundnumber">1</h3>
     </div>
+</div>
 
     <script src="js/jquery-1.7.2.js"></script>
     <script src="js/game.js"></script>
