--- a/index.html
+++ b/index.html
@@ -11,39 +11,39 @@
 
 <!-- Background image and log -->
 <div class = "logo">
-<img src="images/street-fighter-logo-font-download-856x484.jpeg" id="logo" alt="">
+    <img src="images/street-fighter-logo-font-download-856x484.jpeg" id="logo" alt="">
 </div>
 <div class = "logo2">
-<img src="images/street-fighter-logo-font-download-856x484.jpeg" id="logo" alt="">
+    <img src="images/street-fighter-logo-font-download-856x484.jpeg" id="logo" alt="">
 </div>
 
 <!-- Tic - Tac - Toe Matrix -->
 <div class = "container"> 
-<div class = 'gridbox'>
-<div class = 'griditem' matrix id="box1"><cell id = "checkbox1"></cell></div>
-<div class = 'griditem' matrix id="box2"><cell id = "checkbox2"></cell></div>
-<div class = 'griditem' matrix id="box3"><cell id = "checkbox3"></cell></div>
-<div class = 'griditem' matrix id="box4"><cell id = "checkbox4"></cell></div>
-<div class = 'griditem' matrix id="box5"><cell id = "checkbox5"></cell></div>
-<div class = 'griditem' matrix id="box6"><cell id = "checkbox6"></cell></div>
-<div class = 'griditem' matrix id="box7"><cell id = "checkbox7"></cell></div>
-<div class = 'griditem' matrix id="box8"><cell id = "checkbox8"></cell></div>
-<div class = 'griditem' matrix id="box9"><cell id = "checkbox9"></cell></div>
+    <div class = 'gridbox'>
+    <div class = 'griditem' matrix id="box1"><cell id = "checkbox1"></cell></div>
+    <div class = 'griditem' matrix id="box2"><cell id = "checkbox2"></cell></div>
+    <div class = 'griditem' matrix id="box3"><cell id = "checkbox3"></cell></div>
+    <div class = 'griditem' matrix id="box4"><cell id = "checkbox4"></cell></div>
+    <div class = 'griditem' matrix id="box5"><cell id = "checkbox5"></cell></div>
+    <div class = 'griditem' matrix id="box6"><cell id = "checkbox6"></cell></div>
+    <div class = 'griditem' matrix id="box7"><cell id = "checkbox7"></cell></div>
+    <div class = 'griditem' matrix id="box8"><cell id = "checkbox8"></cell></div>
+    <div class = 'griditem' matrix id="box9"><cell id = "checkbox9"></cell></div>
 </div>
 
 <!-- Scoreboard and score counter -->
 <div class = "scoreboard" class = 'gridbox'>
-<ul> 
-<li id="player1result"> 0 </li>  
-</ul>
-<ul> 
-<li id = "player2result"> 0 </li>
-</ul>
+    <ul> 
+    <li id="player1result"> 0 </li>  
+    </ul>
+    <ul> 
+    <li id = "player2result"> 0 </li>
+    </ul>
 </div> 
 
 <!-- Round Number Counter -->
 <div class = "round">
-<h3 id ="roundnumber"> Round 1</h3>
+    <h3 id ="roundnumber"> Round 1</h3>
 </div>
 
 <div class = "gameresult"><h4 id ="result">WHO WINS</h4></div> 
@@ -58,7 +58,7 @@
 <div class = "ryustance"><img src="images/ryustance.gif" alt=""></div>
 <div class = "kenstance"><img src="images/ken stance.gif" alt=""></div>
 <img class ='display' src="images/ryuvskenbackgroundNEW.jpg_large" alt="">
-</div>
+<!-- </div> -->
 
 <!-- Spotify embeded -->
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/06T9H8NBDBxH8B7oBn8Vls?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
